--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:german.novikov@skoltech.ru">email</a></li>
-	        		<li><a href="https://github.com/adaegroup">github.com/adaegroup</a></li>
+	        		<li><a href="https://github.com/adasegroup">github.com/adasegroup</a></li>
 				</ul>
 			</footer>
 		</body>
