--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,31 @@
----
-layout: default
----
-<h1>{{ page.title }}</h1>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<!DOCTYPE html>
+<html lang="en">
 
-<div class="post">
-  {{ content }}
+{% include head.html %}
+
+<body>
+
+<div class="container">
+{% include header.html %}
+<div class="row">
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+<h1>{{ page.title }} <br /><small>Updated on {{ page.date | date: "%B %-d, %Y" }}</small></h1>
+
+<hr>
+{{ content }}
+
+{% if page.comment %}
+{% include disqus.html %} 
+{% endif %} 
+
+<hr>
+
+{% include footer.html %}
+	
 </div>
+</div>
+</div>
+
+</body>
+</html>
+
