--- a/css/main.scss
+++ b/css/main.scss
@@ -17,9 +17,10 @@ $text-color:       #111;
 $background-color: #fdfdfd;
 $brand-color:      #0077CC;
 // $gameday-sky: #109dc0;
-$clemson-purple:      #522d80;
-$clemson-orange:      #f66733;
-
+//$clemson-purple:      #522d80;
+//$clemson-orange:      #f66733;
+$clemson-purple:   #8c8c8c;
+$clemson-orange:   #8c8c8c;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
