changes to the main page

--- a/new_particle/_layouts/default.html
+++ b/new_particle/_layouts/default.html
@@ -13,8 +13,17 @@
       <section id="research">
         {% include research.html %}
       </section>
+      <section id="staff">
+        {% include staff.html %}
+      </section>
+      <section id="news">
+        {% include teaching.html %}
+      </section>
       <section id="projects">
         {% include projects.html %}
+      </section>
+      <section id="publications">
+        {% include publications.html %}
       </section>
         {{ content }}
       {% include footer.html %}
