--- a/new_particle/src/styles/main.scss
+++ b/new_particle/src/styles/main.scss
@@ -6,11 +6,15 @@
 @import 'vars';
 @import 'variables';
 @import 'animation';
+@import 'mixins';
 @import 'header';
 @import 'about';
 @import 'profile';
+@import 'staff';
 @import 'research';
 @import 'projects';
 @import 'footer';
 @import 'news';
+
+//@import 'resume';
 
