--- a/new_particle/_includes/header.html
+++ b/new_particle/_includes/header.html
@@ -14,9 +14,10 @@
         <a class="link" href="#about" data-scroll>{{site.about_title}}</a>
         <a class="link" href="#news" data-scroll>{{site.news_title}}</a>
         <a class="link" href="#research" data-scroll>{{site.research_title}}</a>
-        <a class="link" href="#projects" data-scroll>{{site.industry_title}}</a>
         <a class="link" href="#teaching" data-scroll>{{site.teaching_title}}</a>
-        <a class="link" href="#teaching" data-scroll>{{site.group_title}}</a>
+        <a class="link" href="#staff" data-scroll>{{site.staff_title}}</a>
+        <a class="link" href="#projects" data-scroll>{{site.industry_title}}</a>
+        <a class="link" href="#publications" data-scroll>{{site.publications_title}}</a>
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
