--- a/new_particle/_includes/teaching.html
+++ b/new_particle/_includes/teaching.html
@@ -1,11 +1,11 @@
 <div class="news-details">
-  <h1>{{site.news_title}}</h1>
-  {% if site.news  %}
+  <h1> {{site.teaching_title}} </h1>
+  {% if site.lectures  %}
     <table>
-    {% assign news = site.news | reverse %}
-    {% for item in news limit: site.news_limit %}
+    {% assign lectures = site.lectures | reverse %}
+    {% for item in lectures limit: site.lectures_limit %}
       <tr>
-        <td class="date">{{ item.date | date: "%b %-d, %Y" }}</td>
+        <td class="date">{{ item.date | date: "%b, %Y" }}</td>
         <td class="announcement">
           {% if item.inline %}
             {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
@@ -17,6 +17,6 @@
     {% endfor %}
     </table>
   {% else %}
-    <p>No news so far...</p>
+    <p>No lectures so far...</p>
   {% endif %}
 </div>
