updated project section

--- a/new_particle/_includes/about.html
+++ b/new_particle/_includes/about.html
@@ -1,6 +1,12 @@
  <div class="user-details">
   <h1> {{site.about_title}} </h1>
-  <p> {{site.user_description}} </p>
+  <p> {{site.user_description}}</p>
+  <h3>In a nutshell:</h3>
+  <ul>
+    <li>We develop new machine learning approaches to efficient predictive modeling and engineering optimization</li>
+    <li>We collaborate with industrial companies and produce solutions, approved by the industry</li>
+    <li>We constantly seek new advanced ML problems, their industrial applications and new collaboration</li>
+  </ul>
   <h1>Research Areas</h1>
 </div>
   <div class="user">
