Updated styles and text after consultations with P.B

--- a/new_particle/_includes/about.html
+++ b/new_particle/_includes/about.html
@@ -1,12 +1,12 @@
  <div class="user-details">
   <h1> {{site.about_title}} </h1>
-  <p> {{site.user_description}}</p>
-  <h3>In a nutshell:</h3>
-  <ul>
-    <li>We develop new machine learning approaches to efficient predictive modeling and engineering optimization</li>
-    <li>We collaborate with industrial companies and produce solutions, approved by the industry</li>
-    <li>We constantly seek new advanced ML problems, their industrial applications and new collaboration</li>
-  </ul>
+  <p>The Advanced Data Analytics in Science and Engineering Group is a research organisation focused on the development of novel machine learning methods with industrial applications based at the Skolkovo Institute of Science and Technology (Skoltech). 
+  The group is conformed by a research team consisting of academic experts, doctoral students and developers.</p>
+  <h3>In a nutshell, we are</h3>
+  <p>Developing novel predictive modeling & engineering optimization approaches<br/>
+    Applying new advanced ML methods to industrial applications<br/>
+    Collaborating closely with the industry
+  </p>
   <h1>Research Areas</h1>
 </div>
   <div class="user">
@@ -18,7 +18,7 @@
     <div class="tech">
       <h2>{{site.block2_title}}</h2>
       <img alt="{{site.block2_title}}" src="{{ "/assets/img/adase_2.jpg" | prepend: site.baseurl }}" />
-      <p>{{site.block2_description}} gadaga</p>
+      <p>{{site.block2_description}}</p>
     </div>
     <div class="tech">
       <h2>{{{site.block3_title}}</h2>
