--- a/new_particle/_includes/header.html
+++ b/new_particle/_includes/header.html
@@ -3,12 +3,12 @@
       <h1>
         <span class="site-title">{{site.username}}</span>
          <span class="site-description">{{site.username_full}}</span>
-        <span class="site-description">{{site.user_title}}</span>
+        <span class="site-description2">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
         <a aria-label="Contact us" href="#"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="LinkedIn" target="_blank" href="#"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
-        <a aria-label="Github" target="_blank" href="#"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+        <a aria-label="Github" target="_blank" href="https://github.com/adasegroup"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>{{site.about_title}}</a>
