--- a/new_particle/_includes/staff.html
+++ b/new_particle/_includes/staff.html
@@ -6,7 +6,7 @@
     <img src="/assets/img/pb.jpg" alt="Evgeny Burnaev" class="no-print" itemprop="image">
     {% endif %}</p>
   <h3>Evgeny Burnaev</h3>
-  <h4>Leadership</h4>
-  <p>{{site.staff_description}}</p>
+  <h4>Associate Professor</h4>
+  <h5>Skoltech Center for Computational Data-Intensive Science and Engineering.</h5>
   <a class="project-link" href="#">More...</a>
 </div>
