--- a/new_particle/src/styles/_research.scss
+++ b/new_particle/src/styles/_research.scss
@@ -8,7 +8,8 @@
 }
 
 .research {
-  text-align: center;
+  text-align: justify;
+  text-align-last: center;
   font-size: 60px;
   display: flex;
   flex-direction: row;
@@ -24,6 +25,7 @@
 }
 
 .research-details {
-  text-align: center;
+  text-align: justify;
+  text-align-last: center;
   margin: 5px auto;
 }
