Included a contact section and made modifications to styles

--- a/new_particle/_includes/_main/about.html
+++ b/new_particle/_includes/_main/about.html
@@ -11,18 +11,18 @@
 </div>
   <div class="user">
     <div class="tech">
-      <h2>{{site.block1_title}}</h2>
+      <h3>{{site.block1_title}}</h3>
       <img alt="{{site.block1_title}}" src="{{ "/assets/img/adase_1.png" | prepend: site.baseurl }}" />
       <p>{{site.block1_description}}</p>
     </div>
     <div class="tech">
-      <h2>{{site.block2_title}}</h2>
-      <img alt="{{site.block2_title}}" src="{{ "/assets/img/adase_2.jpg" | prepend: site.baseurl }}" />
+      <h3>{{site.block2_title}}</h3>
+      <img alt="{{site.block2_title}}" src="{{ "/assets/img/adase_2.png" | prepend: site.baseurl }}" />
       <p>{{site.block2_description}}</p>
     </div>
     <div class="tech">
-      <h2>{{{site.block3_title}}</h2>
-      <img alt="{{site.block3_title}}" src="{{ "/assets/img/adase_3.gif" | prepend: site.baseurl }}" />
+      <h3>{{{site.block3_title}}</h3>
+      <img alt="{{site.block3_title}}" src="{{ "/assets/img/adase_3.png" | prepend: site.baseurl }}" />
       <p>{{site.block3_description}}</p>
     </div>
 </div>
