--- a/new_particle/_includes/header.html
+++ b/new_particle/_includes/header.html
@@ -6,9 +6,10 @@
         <span class="site-description2">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
-        <a aria-label="Contact us" href="#"><i class="icon fa fa-envelope"></i></a>
+        <a aria-label="Contact us" href="mailto:adase@skoltech.ru?subject=Contact ADASE Group"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="LinkedIn" target="_blank" href="#"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
         <a aria-label="Github" target="_blank" href="https://github.com/adasegroup"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+        <a aria-label="Twitter" target="_blank" href="https://twitter.com/adasegroup"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>{{site.about_title}}</a>
@@ -18,6 +19,7 @@
         <a class="link" href="#staff" data-scroll>{{site.staff_title}}</a>
         <a class="link" href="#projects" data-scroll>{{site.industry_title}}</a>
         <a class="link" href="#publications" data-scroll>{{site.publications_title}}</a>
+        <a class="link" href="#contact" data-scroll>{{site.contact_title}}</a>
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
