--- a/new_particle/src/styles/_news.scss
+++ b/new_particle/src/styles/_news.scss
@@ -7,6 +7,11 @@
   }
 }
 
+.announcement { 
+              width: 81%;
+              text-align: left
+}
+
 .news {
     border-top: 1px solid $grey-color-light;
     margin-top: 30px;
@@ -50,4 +55,9 @@
 .news-details {
   text-align: center;
   margin: 5px auto;
+  table {
+    width:80%; 
+    margin-left:10%; 
+    margin-right:10%;
+  }
 }
