--- a/new_particle/_layouts/default_alt.html
+++ b/new_particle/_layouts/default_alt.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+  {% include _global/head.html %}
 
   <body>
 
@@ -11,9 +11,9 @@
       </div>
     </div>
 
-    {% include footer.html %}
+    {% include _global/footer.html %}
 
-    {% include hemline.html %}
+    {% include _global/hemline.html %}
 
   </body>
 
