Added new sections and templates

--- a/new_particle/_includes/_global/footer.html
+++ b/new_particle/_includes/_global/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-    <p>&copy; 2018 {{site.username}}. All rights reserved</p>
+    <p>&copy; 2018 <a href="{{ site.baseurl }}/">{{site.username}}</a>. All rights reserved</p>
     <p>{{site.footer_text}}</p>
 </footer>
 <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
