--- a/new_particle/_includes/_global/header.html
+++ b/new_particle/_includes/_global/header.html
@@ -12,14 +12,9 @@
         <a aria-label="Twitter" target="_blank" href="https://twitter.com/adasegroup"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
-        <a class="link" href="#about" data-scroll>{{site.about_title}}</a>
-        <a class="link" href="#news" data-scroll>{{site.news_title}}</a>
-        <a class="link" href="#research" data-scroll>{{site.research_title}}</a>
-        <a class="link" href="#teaching" data-scroll>{{site.teaching_title}}</a>
-        <a class="link" href="#staff" data-scroll>{{site.staff_title}}</a>
-        <a class="link" href="#projects" data-scroll>{{site.industry_title}}</a>
-        <a class="link" href="#publications" data-scroll>{{site.publications_title}}</a>
-        <a class="link" href="#contact" data-scroll>{{site.contact_title}}</a>
+            {% for steve in site.data.menu %}
+            <a class="link" href="{{ steve.href }}">{{ steve.title }}</a>
+            {% endfor %}
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
