--- a/new_particle/src/styles/_global/_mixins.scss
+++ b/new_particle/src/styles/_global/_mixins.scss
@@ -101,3 +101,9 @@
   border-bottom: 1px solid #c7c7c7;
   padding: .2rem 0 .2rem;
 }
+
+@mixin media-query($device) {
+    @media screen and (max-width: $device) {
+        @content;
+    }
+}
