Reorganizing the staff section and including a new hierarchy

--- a/new_particle/_layouts/default_alt.html
+++ b/new_particle/_layouts/default_alt.html
@@ -5,7 +5,7 @@
   {% include _content/header.html %}
 
   <body>
-
+<div class="content-layout">
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
@@ -15,7 +15,7 @@
     {% include _global/footer.html %}
 
     {% include _global/hemline.html %}
-
+</div>
   </body>
 
 </html>
