--- a/new_particle/src/styles/_content/_header.scss
+++ b/new_particle/src/styles/_content/_header.scss
@@ -1,7 +1,7 @@
 /**
  * Site header
  */
-.content-alt{
+.content-header{
 .site-header {
     border-top: 0px solid $main;
 	border-bottom: 4px solid $main;
