semi final version

--- a/new_particle/_includes/_main/publications.html
+++ b/new_particle/_includes/_main/publications.html
@@ -22,7 +22,7 @@ Burnaev E., Panin I., Sudret B. <br/>
 (Accepted in Annals of Mathematics and Artificial Intelligence, 2017).
 </p>
 
-<a href="#">More...</a>
+<a href="/publications/">More...</a>
 </div>
 
 
