--- a/new_particle/_includes/_main/projects.html
+++ b/new_particle/_includes/_main/projects.html
@@ -19,7 +19,7 @@
       </p>
     <p>Some challenges are the presence of heterogeneous data and noise, large volumes of high-dimensional stream data, missing values, outliers/incorrect values, etc.
 </p>
-    <a class="project-link" href="#">More...</a>
+    <a class="project-link" href="/industrial_projects/">More...</a>
   </div>
 </div>
 <div class="user-projects">
@@ -48,6 +48,6 @@
         <li>Local features based on differential geometry</li>
       </ul>      
     <p>Some challenges are the presence of heterogeneous data and noise, large volumes of high-dimensional stream data, missing values, outliers/incorrect values, etc.
-</p><a class="project-link" href="#">More...</a>
+</p><a class="project-link" href="/industrial_projects/">More...</a>
   </div>
 </div>
