--- a/_includes/_main/about.html
+++ b/_includes/_main/about.html
@@ -26,4 +26,4 @@
       <p>{{site.block3_description}}</p>
     </div>
 </div>
-<a class="project-link" href=""/publications/">Publications</a>
+<a class="project-link" href="/publications/">Publications</a>
