--- a/_includes/_main/research.html
+++ b/_includes/_main/research.html
@@ -6,5 +6,5 @@
   Aside from traditional convex and non-convex optimization techniques, we see great potential in modern artificial intelligence, mainly deep learning, 
   in order to achieve these goals.<br/> <br/>
   <strong>Keywords:</strong> Machine Learning, Engineering Problems, Online Data, Kernel Methods, Gaussian Process, Deep Learning.</p>
-<a class="project-link" href=""/academic_projects/">More...</a>
+<a class="project-link" href="/academic_projects/">More...</a>
 </div>
