--- a/_includes/_main/staff.html
+++ b/_includes/_main/staff.html
@@ -28,7 +28,7 @@
       <h4>Rodrigo Rivera</h4>
     </div>
 </div>
-<a class="project-link" href=""/staff/">More...</a>  
+<a class="project-link" href="/staff/">More...</a>  
 
 
 </div>
