--- a/src/styles/_main/_research.scss
+++ b/src/styles/_main/_research.scss
@@ -1,4 +1,4 @@
-#research {
+#research, #publications, #contact {
   width: 90%;
   margin: 0 auto;
   max-width: 960px;
@@ -16,6 +16,8 @@
   flex-wrap: wrap;
   justify-content: space-between;
   p {
+    text-align: justify;
+    text-align-last: center;
     font-size: 16px;
   }
   @media only screen and (min-width: $cut) {
@@ -26,6 +28,14 @@
 
 .research-details {
   text-align: justify;
+  -moz-text-align-last: center; /* Code for Firefox */
   text-align-last: center;
   margin: 5px auto;
+  
+  h1 {
+    text-align: center;
+  }
+  h2 {
+    text-align: center;
+  }
 }
