fixed Main Navigation

--- a/_includes/_content/header.html
+++ b/_includes/_content/header.html
@@ -16,7 +16,7 @@
         </svg>
       </a>  
 
-    <div class="trigger"><h1>Main Navigation</h1>
+    <div class="trigger"><h1>ADASE Group</h1>
 
  {% include _content/nav_bar.html  %}
 
