--- a/_includes/_content/nav_bar.html
+++ b/_includes/_content/nav_bar.html
@@ -1,7 +1,7 @@
 
             
 <ul class="menu">
-    {% for steve in site.data.menu %}
+    {% for steve in site.data.nav_bar %}
     <li><a href="{{ steve.href }}" class="page-link">{{ steve.title }}</a></li>
     {% endfor %}
 </ul>
