--- a/_includes/_global/header.html
+++ b/_includes/_global/header.html
@@ -12,7 +12,7 @@
         <a aria-label="Twitter" target="_blank" href="https://twitter.com/adasegroup"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
-            {% for steve in site.data.menu %}
+            {% for steve in site.data.nav_bar %}
             <a class="link" href="{{ steve.href }}">{{ steve.title }}</a>
             {% endfor %}
       </div>
