bringing news section

--- a/_includes/_content/header.html
+++ b/_includes/_content/header.html
@@ -18,7 +18,7 @@
 
     <div class="trigger"><h1>ADASE Group</h1>
 
- {% include _content/nav_bar.html  %}
+ {% include _content/nav_bar.html  menu = site.data.nav_bar %}
 
      </div>  
     </nav>
