--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,11 @@
       <section id="about">
         {% include _main/about.html %}
       </section>
+      <section id="news">
+        {% include _main/news.html %}
+      </section>
+      
+      
   
         {{ content }}
       {% include _global/footer.html %}
