fixed styles in navigation

--- a/src/styles/_global/_base.scss
+++ b/src/styles/_global/_base.scss
@@ -52,3 +52,35 @@ sup, sub {
     padding-left: $horizontal-spacing-unit;
     @extend .clearfix;
 }
+
+a {
+  margin: 10px 0px;
+  padding: 5px;
+  color: $main;
+  background-color: transparent;
+  border: 1px solid $main;
+  border-radius: 10px;
+  text-align: center;
+  outline: none;
+  text-decoration: none;
+  cursor: pointer;
+  transition: color 0.3s ease-out,
+              background-color 0.3s ease-out,
+              border-color 0.3s ease-out;
+  &:hover {
+    background-color: $sec;
+    border-color: $sec;
+    color: #fff;
+    transition: color 0.3s ease-in,
+                background-color 0.3s ease-in,
+                border-color 0.3s ease-in;
+  }
+  &:active {
+    background-color: $sec;
+    border-color: $sec;
+    color: #fff;
+    transition: color 0.3s ease-in,
+                background-color 0.3s ease-in,
+                border-color 0.3s ease-in;
+  }
+}
