--- a/src/styles/_content/_header.scss
+++ b/src/styles/_content/_header.scss
@@ -170,6 +170,10 @@ z-index:999;
         &:not(:first-child) {
             margin-left: 20px;
         }
+        &:hover {
+            text-decoration: underline;
+            
+        }
     }
 
 
