--- a/src/styles/_global/_header.scss
+++ b/src/styles/_global/_header.scss
@@ -66,7 +66,10 @@
     text-decoration: none;
     font-size: 15px;
     margin: 10px;
-
+    &:hover{
+      color: $sec;
+      text-decoration: underline;
+    }
     @media only screen and (min-width:$cut){
       font-size: 20px;
     }
