--- a/_includes/_main/about.html
+++ b/_includes/_main/about.html
@@ -1,6 +1,16 @@
  <div class="user-details">
-  <h1> {{site.about_title}} </h1>
-  <p>The Advanced Data Analytics in Science and Engineering Group is a research organisation focused on the development of novel machine learning methods with industrial applications based at the Skolkovo Institute of Science and Technology (Skoltech). 
+  <h1></h1>
+
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
+   <h1> {{site.news_title}} </h1>
+    here go some new new news
+  </div>
+  <div class="contents">
+    <h1>{{site.about_title}}  </h1>
+      <p>The Advanced Data Analytics in Science and Engineering Group is a research organisation focused on the development of novel machine learning methods with industrial applications based at the Skolkovo Institute of Science and Technology (Skoltech). 
   The group is conformed by a research team consisting of academic experts, doctoral students and developers.</p>
   <h3>In a nutshell, we are</h3>
   <p>Developing novel predictive modeling & engineering optimization approaches<br/>
@@ -8,4 +18,5 @@
     Collaborating closely with the industry
   </p>
 
+  </div>
 </div>
