--- a/_layouts/default_alt.html
+++ b/_layouts/default_alt.html
@@ -6,9 +6,37 @@
 
   <body>
 <div class="content-layout">
-    <div class="page-content">
+  
       <div class="wrapper">
-        {{ content }}
+
+      
+       <div class="content-layout-right">
+        <h2>{{site.news_title}}</h2>
+  {% if site.news  %}
+    <table>
+      {% for item in site.news reversed limit: site.news_limit %}
+    
+      <tr>
+        <td class="date">{{ item.date | date: "%b %Y" }}</td>
+        <td class="announcement">
+          {% if item.inline %}
+            {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
+          {% else %}
+            <a class="news-title" href="{{ item.url | prepend: site.baseurl }}">{{ item.title }}</a>
+          {% endif %}
+        </td>
+      </tr>
+    {% endfor %}
+    </table>
+  {% else %}
+    <p>No news so far...</p>
+  {% endif %}
+         </div>
+         
+        <div class="content-layout-left">
+      {{ content }}
+      </div>     
+    
       </div>
     </div>
 
