--- a/src/styles/_global/_vars.scss
+++ b/src/styles/_global/_vars.scss
@@ -1,4 +1,4 @@
-$main2: #DCDCDC url("../img/logo_transparent_background.png");
+$main2: #484848 url("../img/logo_transparent_background.png");
 $main: url("../img/screen.jpg");
 $sec: #4B5664;
 $purple: #54516A;
