--- a/src/styles/_global/_base.scss
+++ b/src/styles/_global/_base.scss
@@ -44,8 +44,8 @@ sup, sub {
 }
 
 .wrapper {
-    max-width: -webkit-calc(800px - (#{$horizontal-spacing-unit} * 2));
-    max-width:         calc(800px - (#{$horizontal-spacing-unit} * 2));
+    max-width: -webkit-calc(1366 - (#{$horizontal-spacing-unit} * 2));
+    max-width:         calc(1366 - (#{$horizontal-spacing-unit} * 2));
     margin-right: auto;
     margin-left: auto;
     padding-right: $horizontal-spacing-unit;
