Stack personal pages at Staff vertically, as Evgeny asked

--- a/src/styles/_content/staff/_staff_excerpt.sass
+++ b/src/styles/_content/staff/_staff_excerpt.sass
@@ -36,5 +36,8 @@ $staff-photo-min-width: ($title-size * $local-line-height + $title-margin + $rol
     .status, .pages
       font-size: $status-pages-size
 
+    .pages .short-link
+      display: block
+
 
 +make-grid-selector('.staff', $staff-excerpt-margin)
