Clean 3ddl home

--- a/_layouts/team_home.html
+++ b/_layouts/team_home.html
@@ -9,16 +9,8 @@ layout: default_full_body
 <article id="team-home">
     <header id="team-home-header">
         {% include _content/team_home_slider.html announcements=fancy_announcements %}
-				<div class="centered-section">
-					<section id="team-home-news-section">
-						<h2 id="news" class="anchor">News</h2>
-						<div id="team-home-news-list-wrapper">
-							{% include _content/news_list.html news=news %}
-						</div>
-					</section>
-				</div>
     </header>
     <section id="team-home-content" class="centered-section">
-        {{ content -}}
+        Coming soon...
     </section>
 </article>
