--- a/_includes/_main/research/make_project_containers.html
+++ b/_includes/_main/research/make_project_containers.html
@@ -1,4 +1,4 @@
-{%- assign containers = site.data | where: 'nil', nil %}
+{%- assign containers = site.data | where_exp: 'data', 'data.nil' %}
 {%- for item in include.projects %}
 {%- capture new_container %}
 {%- include _content/plates/project_plate.html plate_data=item %}
