Neuro template complete

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,6 +26,8 @@
 @import '_content/plates/project_plate';
 @import '_content/staff/staff_excerpt';
 @import '_content/staff/staff_grid';
+@import '_content/staff/staff_details';
+@import '_content/staff/staff_full_width';
 @import '_content/news_list';
 
 @import '_main/front_page';
