--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,7 @@ layout: default
         <h1 class="post-title">{{ page.title }}</h1>
         <p class="post-meta">{{ page.date | date: "%B %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{%
             if page.meta %} • {{ page.meta }}{% endif %}</p>
+        {%- if page.thumbnail %}<div class="img-container"><img class="thumbnail" src="{{page.thumbnail}}"> </div>{% endif -%}
     </header>
     <article class="post-content">
         {{ content }}
