Add video for Deep vectorization

--- a/src/styles/_content/projects/_project_page.sass
+++ b/src/styles/_content/projects/_project_page.sass
@@ -28,11 +28,13 @@ $visual-abstract-height: 30rem
   #visual-abstract
     #visual-abstract-container
       max-height: $visual-abstract-height
-      #visual-abstract-img
+      #visual-abstract-img, #visual-abstract-vid
         width: 100%
         max-height: inherit
         object-fit: contain
         border: none
+      #visual-abstract-vid
+        height: 360px
 
 #project-excerpt
   display: flex
