--- a/_layouts/project_page.html
+++ b/_layouts/project_page.html
@@ -31,7 +31,13 @@ layout: default
             endfor %}{% endif %}</p>
         <p id="venue">{{page.venue}}</p>
 
-        {% if page.visual_abstract %}
+        {% if page.video %}
+        <section id="visual-abstract">
+            <div id="visual-abstract-container">
+                <iframe id="visual-abstract-vid" type="text/html" src="{{page.video}}?rel=0" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </section>{%
+        else %}{% if page.visual_abstract %}
         <section id="visual-abstract">
             <div id="visual-abstract-container">
                 <img id="visual-abstract-img" src="{{page.visual_abstract}}">
@@ -40,7 +46,7 @@ layout: default
             <div id="visual-abstract-description">{{page.visual_abstract_description}}</div>
             {% endif %}
         </section>
-        {% endif %}
+        {% endif %}{% endif %}
     </header>
     <div id="project-excerpt-container">
         <section id="project-excerpt">
