--- a/_includes/_main/front_page_header.html
+++ b/_includes/_main/front_page_header.html
@@ -10,11 +10,11 @@
 						</div>
         </div>
         <div class="header-icons">
-            <a aria-label="Contact us" href="mailto:adase@skoltech.ru?subject=Contact ADASE Group"><i
+            <a aria-label="Contact us" href="mailto:adase.group@gmail.com?subject=Contact ADASE Group"><i
                     class="icon fa fa-envelope"></i></a>
             <a aria-label="LinkedIn" target="_blank" href="https://www.linkedin.com/company/adase/"><i
                     class="icon fa fa-linkedin" aria-hidden="true"></i></a>
-            <a aria-label="Github" target="_blank" href="https://github.com/adasegroup"><i class="icon fa fa-github-alt"
+            <a aria-label="Github" target="_blank" href=""><i class="icon fa fa-github-alt"
                                                                                            aria-hidden="true"></i></a>
             <a aria-label="Twitter" target="_blank" href="https://twitter.com/adasegroup"><i class="icon fa fa-twitter"
                                                                                              aria-hidden="true"></i></a>
